--- a/pom.xml
+++ b/pom.xml
@@ -304,7 +304,7 @@
 			<dependency>
 				<groupId>com.datastax.cassandra</groupId>
 				<artifactId>cassandra-driver-core</artifactId>
-				<version>2.0.0-rc1</version>
+				<version>2.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>joda-time</groupId>
